--- a/index.html
+++ b/index.html
@@ -149,48 +149,52 @@
             </tr>
           </tbody>
         </table>
-        <div  class="personal" id="personaal">
+        <div class="personal" id="personaal">
           <h3 id="per">
             <span class="me"></span>personal Details <span class="me"></span>
           </h3>
-          <img  id="img"   src="https://e7.pngegg.com/pngimages/411/79/png-clipart-cartoon-female-woman-child-face-thumbnail.png" width="10%" />
+          <img
+            id="img"
+            src="https://e7.pngegg.com/pngimages/411/79/png-clipart-cartoon-female-woman-child-face-thumbnail.png"
+            width="10%"
+          />
           <span id="name">
-    <p><b>Name:</b> Nikita Mane</p>
+            <p><b>Name:</b> Nikita Mane</p>
 
-    <p><b>Mobile Number:</b> 5467890745</p>
+            <p><b>Mobile Number:</b> 5467890745</p>
 
-    <p><b>Email:</b>nikita5432@gmail.com</p>
+            <p><b>Email:</b>nikita5432@gmail.com</p>
 
-    <p><b>Date of brith:</b>Feb-19-2000</p>
+            <p><b>Date of brith:</b>Feb-19-2000</p>
 
-    <p><b>Address: </b>shahu colony,pune</p>
-    <details>
-      <summary><b>Family Details</b></summary>
-      <ul>
-        <li>Father Name: Pravin Mane</li>
-        <li>Mother Name : Minakshi Mane</li>
-      </ul>
-    </details>
-    <details>
-      <summary id="hobbi"><b>Hobbies =></b></summary>
-      <ul style="list-style: square;">
-        <li class="hob">Photography</li>
-        <li class="hob"> Writting</li>
-        <li class="hob">Story Reading</li>
-        <li class="hob">Cooking</li>
-      </ul>
-    </details>
-    <details>
-      <summary id="achiv"><b>Achivements =></b></summary>
-      <ul style="list-style: circle;">
-        <li>Giving a Great Presentation at work.</li>
-        <li>Come up with new idea that improved things.</li>
-        <li>Identified a Problem and Solved it</li>
-        <li>saved time for the Family</li>
-        <li>Donts Give UP</li>
-      </ul>
-    </details>
-  </span>
+            <p><b>Address: </b>shahu colony,pune</p>
+            <details>
+              <summary><b>Family Details</b></summary>
+              <ul>
+                <li>Father Name: Pravin Mane</li>
+                <li>Mother Name : Minakshi Mane</li>
+              </ul>
+            </details>
+            <details>
+              <summary id="hobbi"><b>Hobbies =></b></summary>
+              <ul style="list-style: square">
+                <li class="hob">Photography</li>
+                <li class="hob">Writting</li>
+                <li class="hob">Story Reading</li>
+                <li class="hob">Cooking</li>
+              </ul>
+            </details>
+            <details>
+              <summary id="achiv"><b>Achivements =></b></summary>
+              <ul style="list-style: circle">
+                <li>Giving a Great Presentation at work.</li>
+                <li>Come up with new idea that improved things.</li>
+                <li>Identified a Problem and Solved it</li>
+                <li>saved time for the Family</li>
+                <li>Donts Give UP</li>
+              </ul>
+            </details>
+          </span>
         </div>
       </div>
     </div>
